Created Home Page Layout

--- a/public-html/index.html
+++ b/public-html/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Open Trivia</title>
     <link rel="stylesheet" href="./css/home.css">
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="titleHolder">
+        <h1>Open Trivia!</h1>
+    </div>
+    <div class="buttonHolder">
+        <button id="join">Join a Game</button>
+        <button id="host">Host a Game</button>
+    </div>
 </body>
 </html>
